<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/heading"
            android:text="@string/UprKonstrukcii1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UprKonstrukcii2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/heading"
            android:text="@string/UprKonstrukcii3"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UprKonstrukcii4"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/heading"
            android:text="@string/UprKonstrukcii5"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UprKonstrukcii6"
            />
    </LinearLayout>
</ScrollView>